# iareport-api

./: .gitattributes  .gitignore  create_db.py  iareport.db  iareport.sqbpro  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  test error.csv  test.csv
app/: main.py
app/api/v1/: upload.py
app/core/: config.py
app/domain/: ingestion.py
app/models/: dataset.py
apps/api/: .coverage  .env  Dockerfile  create_db.py  iareport.sqbpro  pyproject.toml
apps/api/.github/: COMMIT_EDITMSG  config  index
apps/api/.github/logs/: HEAD
apps/api/.github/logs/refs/heads/: main
apps/api/.github/logs/refs/remotes/origin/: main  master
apps/api/.github/refs/heads/: main
apps/api/.github/refs/remotes/origin/: master
apps/api/.github/workflows/: tests.yml
apps/api/app/: main.py  mkdocs.yml
apps/api/app/api/v1/: upload.py
apps/api/app/core/: config.py  security.py
apps/api/app/domain/: ingestion.py  validation.py
apps/api/app/models/: __init__.py
apps/api/data/: 48698735-c077-4dae-b3b2-e2f65f03b04b.parquet  9fffc494-02cf-46d9-9b50-d813b04abcda.parquet
apps/api/scripts/: reset_database.py  run-api.ps1
apps/api/tests/: conftest.py  test_manual.py
data/: 5e131345-fa35-4e43-8569-decbd0bf26a9.parquet  read_all_parquets.py
tests/: conftest.py  test_upload.py
