[tool.poetry]
name = "iareport-api"
version = "0.1.0"
description = "API FastAPI + IA local"
authors = ["Tu Nombre <tu@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"  # Permite Python 3.12 y 3.13
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pandas = "^2.2.3"
pandera = "^0.23.1"
sqlmodel = "^0.0.24"
scikit-learn = "^1.6.1"
prophet = "^1.1.6"
loguru = "^0.7.3"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.9.1"
pydantic = "^2.0"
pyarrow = "^19.0.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.27.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.10"
isort = "^5.12"
flake8 = "^6.1"
mypy = "^1.5"
pre-commit = "^3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Correcta configuración de packages como un array
[[tool.poetry.packages]]
include = "app"

[[tool.poetry.packages]]
include = "tests"
